@@ -4,7 +4,7 @@
 \alias{gg2list}
 \title{Convert a ggplot to a list.}
 \usage{
-gg2list(p, width = NULL, height = NULL, mapping = "all", source = "A")
+gg2list(p, width = NULL, height = NULL, tooltip = "all", source = "A")
 }
 \arguments{
 \item{p}{ggplot2 plot.}
@@ -13,8 +13,8 @@ gg2list(p, width = NULL, height = NULL, mapping = "all", source = "A")
 
 \item{height}{Height of the plot in pixels (optional, defaults to automatic sizing).}
 
-\item{mapping}{a character vector specifying which aesthetic mappings to show in the
-tooltip. The default, "all", means show all the aesthetic mappings
+\item{tooltip}{a character vector specifying which aesthetic tooltips to show in the
+tooltip. The default, "all", means show all the aesthetic tooltips
 (including the unofficial "text" aesthetic).}
 
 \item{source}{Only relevant for \link{event_data}.}
